--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -30,7 +30,7 @@
                 <a mat-list-item routerLink="/home/profile" routerLinkActive="active">
                     <p class="black">Profile</p>
                 </a>
-                <a mat-list-item routerLink="/home/policy" routerLinkActive="active">
+                <a mat-list-item routerLink="/home/loan-policy" routerLinkActive="active">
                     <p class="black">Policy</p>
                 </a>
 
@@ -48,7 +48,7 @@
             </button>
             <div class="flex center-center gap-1em">
                 <p>Zaka lendings</p>
-                <mat-icon matBadge="{{enquiries}}" matTooltip="you have {{enquiries}} enquiries" matBadgeColor="warn">notifications</mat-icon>
+                <mat-icon matBadge="{{enquiries}}" matTooltip="you have {{enquiries}} enquiries" matBadgeColor="warn" *ngIf="isOfficer">notifications</mat-icon>
             </div>
 
 
