--- a/src/app/dashboards/borrower/borrower.component.html
+++ b/src/app/dashboards/borrower/borrower.component.html
@@ -1,4 +1,7 @@
 <div class="main-container flex column gap-1em">
+    <div class="apply-btn flex">
+        <button class="apply" mat-raised-button (click)="apply()">Apply</button>
+    </div>
     <div class="cards-container full-width flex center-center">
         <mat-card matBadgeSize="large" class="card flex center-center">
             <p class="color-blu"><b>Personal Loan</b></p>
