--- a/src/app/dashboards/borrower/borrower.component.scss
+++ b/src/app/dashboards/borrower/borrower.component.scss
@@ -4,7 +4,7 @@
 }
 
 .main-container {
-    height: calc(100% - 64px);
+    height: 100%;
 }
 
 .cards-container {
@@ -32,4 +32,19 @@
 
 .color-blu {
     color: #121a2e;
+}
+
+.apply-btn{
+    height: 8%;
+    justify-content: end;
+    align-items: center;
+    padding-right: 35px;
+}
+
+.apply-btn button{
+    width: 10%;
+    height: 100%;
+    font-size: 1.3em;
+    background-color: #121a2e !important;
+    color: #fff !important;
 }
