--- a/src/app/tables/borrower-table/borrower-table.component.html
+++ b/src/app/tables/borrower-table/borrower-table.component.html
@@ -1,22 +1,22 @@
 <h2 class="text-center">Current Loan</h2>
-<mat-card class="width-80 flex center-center">
+<mat-card class="width-80 flex ">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <!--ID Column -->
         <ng-container matColumnDef="loanType">
-            <th mat-header-cell *matHeaderCellDef class="text-center"> Loan Type </th>
+            <th mat-header-cell *matHeaderCellDef> Loan Type </th>
             <td mat-cell *matCellDef="let element"> {{element.loanType}} </td>
         </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="amount">
             <th mat-header-cell *matHeaderCellDef> Amount </th>
-            <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.loanAmount}} </td>
         </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef> Status </th>
-            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.loanStatutus}} </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
