--- a/src/app/components/borrowers/borrowers.component.html
+++ b/src/app/components/borrowers/borrowers.component.html
@@ -1,1 +1,2 @@
-<app-loan-officer-table></app-loan-officer-table>
+<h4>borrowers works</h4>
+<!-- <app-loan-officer-table></app-loan-officer-table> -->
