--- a/src/app/tables/loan-officer-table/loan-officer-table.component.html
+++ b/src/app/tables/loan-officer-table/loan-officer-table.component.html
@@ -33,17 +33,22 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> Action </th>
       <td mat-cell *matCellDef="let element">
-        <mat-icon>check_circle</mat-icon>
-        <mat-icon>cancel</mat-icon>
+        <button class="half-width" mat-raised-button [disabled]="element.status === 'declined'"
+          [color]="element.status === 'pending' ? 'warn':element.status === 'declined' ? 'accent': 'primary'"
+          [matMenuTriggerFor]="menu">{{element.status | titlecase}}</button>
+        <mat-menu #menu="matMenu">
+          <button *ngFor="let option of applicationOptions"
+            mat-menu-item>{{option | titlecase}}</button>
+        </mat-menu>
       </td>
-    </ng-container>
+    </ng-container>
 
     <!-- Options Column -->
     <ng-container matColumnDef="options">
       <th mat-header-cell *matHeaderCellDef> Options </th>
       <td mat-cell *matCellDef="let element">
-        <mat-icon>visibility</mat-icon>
-        <mat-icon>payments</mat-icon>
+        <!-- <mat-icon>visibility</mat-icon>
+        <mat-icon>payments</mat-icon> -->
         <mat-icon>delete</mat-icon>
       </td>
     </ng-container>
