--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
  <!-- <app-borrower></app-borrower> -->
 <router-outlet></router-outlet>
+<!-- <app-loan-officer-table></app-loan-officer-table> -->
 
+<!-- <app-register></app-register> -->
 
 
