--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,9 +4,18 @@
 
         <h3>Personal Details</h3>
         <div class="flex gap-1em m-b-1em">
+            <!-- First Name -->
+            <mat-form-field class="full-width">
+                <mat-label>Full Names</mat-label>
+                <input type="text" matInput formControlName="fullName" placeholder="Edward Thupane">
+                <mat-error *ngIf="signUpForm.get('monthlyIncome')?.hasError('required')">
+                    Salary is <strong>required</strong>
+                </mat-error>
+            </mat-form-field>
+            <!-- ID number -->
             <mat-form-field class="full-width">
                 <mat-label>ID Number</mat-label>
-                <input type="text" matInput formControlName="IDnumber" placeholder="4505254545485">
+                <input type="text" matInput formControlName="IDnumber" placeholder="4505254545485" maxlength="13">
                 <mat-error *ngIf="signUpForm.get('IDnumber')?.hasError('required')">
                     ID number is <strong>required</strong>
                 </mat-error>
@@ -14,7 +23,43 @@
                     ID Number must be 13 Digits
                 </mat-error>
             </mat-form-field>
+            <!-- Gender -->
+            <mat-form-field class="full-width">
+                <mat-label>Gender</mat-label>
+                <mat-select formControlName="gender" value="Male">
+                    <mat-option value="Male">
+                       Male
+                    </mat-option>
+                    <mat-option value="Male">
+                        Feame
+                     </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <!-- Email -->
+            <mat-form-field class="full-width">
+                <mat-label>Email</mat-label>
+                <input type="email" matInput formControlName="email" placeholder="hello@email.pay">
+                <mat-error *ngIf="signUpForm.get('email')?.hasError('required')">
+                    Email is <strong>required</strong>
+                </mat-error>
+                <mat-error *ngIf="signUpForm.get('email')?.hasError('pattern')">
+                    Please enter a valid email address
+                </mat-error>
+            </mat-form-field>
 
+            <!-- Cell Number -->
+            <mat-form-field class="full-width">
+                <mat-label>Cell Number</mat-label>
+                <input type="number" matInput formControlName="cellNumber" placeholder="0793307148">
+                <mat-error *ngIf="signUpForm.get('cellNumber')?.hasError('required')">
+                    Cell Number is <strong>required</strong>
+                </mat-error>
+            </mat-form-field>
+           
+        </div>
+
+        <div class="flex gap-1em m-b-1em">
+            <!-- Salary -->
             <mat-form-field class="full-width">
                 <mat-label>Salary</mat-label>
                 <input type="number" matInput formControlName="monthlyIncome" placeholder="30000">
@@ -22,9 +67,7 @@
                     Salary is <strong>required</strong>
                 </mat-error>
             </mat-form-field>
-        </div>
-
-        <div class="flex gap-1em m-b-1em">
+            <!-- Monthly Expenses -->
             <mat-form-field class="full-width">
                 <mat-label>Monthly Expenses</mat-label>
                 <input type="number" matInput formControlName="monthlyExpenses" placeholder="30000">
@@ -41,6 +84,10 @@
                 </mat-error>
             </mat-form-field>
 
+           
+        </div>
+        <div class="flex gap-1em ">
+            <!-- Choose a loan -->
             <mat-form-field class="full-width">
                 <mat-label>Choose a loan</mat-label>
                 <mat-select formControlName="loanType">
@@ -49,8 +96,6 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-        </div>
-        <div class="flex gap-1em ">
 
             <mat-form-field class="full-width">
                 <mat-label>Loan Amount</mat-label>
