--- a/src/app/popUps/payment/payment.component.html
+++ b/src/app/popUps/payment/payment.component.html
@@ -1,4 +1,5 @@
-<div class="flex center-center column">
+<div class="flex center-center column relative">
+    <mat-icon (click)="close()" class="close absolute">close</mat-icon>
     <h1 class="text-center color-blue">Make A Payment</h1>
     <form [formGroup]="paymentForm" class="flex full-width column padding-12">
         <!-- Initial Amount -->
