--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -51,7 +51,7 @@
             </button>
             <div class="flex center-center gap-1em">
                 <p>Zaka lendings</p>
-                <mat-icon matBadge="{{enquiries}}" matTooltip="you have {{enquiries}} enquiries" matBadgeColor="warn">notifications</mat-icon>
+                <mat-icon matBadge="{{enquiries}}" matTooltip="you have {{enquiries}} enquiries" matBadgeColor="warn" (click)="openNotifications()">notifications</mat-icon>
             </div>
 
 
