--- a/src/app/components/borrowers/borrowers.component.html
+++ b/src/app/components/borrowers/borrowers.component.html
@@ -1,1 +1,2 @@
-<p>borrowers works!</p>
+<!-- <app-loan-officer-table></app-loan-officer-table> -->
+<!-- <app-loan-officer-table></app-loan-officer-table> -->
