--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <!-- <app-loan-officer-table></app-loan-officer-table> -->
 
 <!-- <app-register></app-register> -->
+<!-- <app-contact></app-contact> -->
 
 
 
