--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,7 +18,7 @@
                 <a mat-list-item routerLink="/home/loan-officer" routerLinkActive="active" *ngIf="isOfficer">
                     <p class="black">DashBoard</p>
                 </a>
-                <a mat-list-item routerLink="/home/borrower-table" routerLinkActive="active" *ngIf="!isOfficer">
+                <a mat-list-item routerLink="/home/borrower" routerLinkActive="active" *ngIf="!isOfficer">
                     <p class="black">DashBoard</p>
                 </a>
                 <a mat-list-item routerLink="/home/borrowers" routerLinkActive="active" *ngIf="isOfficer">
