--- a/src/app/components/borrowers/borrowers.component.html
+++ b/src/app/components/borrowers/borrowers.component.html
@@ -1,2 +1,1 @@
-<h4>borrowers works</h4>
-<!-- <app-loan-officer-table></app-loan-officer-table> -->
+<app-loan-officer-table></app-loan-officer-table>
