--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -33,6 +33,9 @@ a:hover {
 .active {
     background-color: #121a2e !important;
     color: white !important;
+    p{
+        color: #fefefe !important;
+    }
 }
 
 // sizes
