--- a/src/app/loan-policy/loan-policy.component.html
+++ b/src/app/loan-policy/loan-policy.component.html
@@ -41,11 +41,11 @@
     <mat-card class="card">
         <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Personal Loan Policy</mat-card-title>
+            <mat-card-title>Long term Policy</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <p>
-                A personal loan allows you to borrow a lump sum of money to pay for a variety of 
+                A long term loan allows you to borrow a lump sum of money to pay for a variety of 
                 expenses and then repay those funds in regular payments, or installments, over time.
                  For example, you might use a personal loan to cover: Moving expenses. Debt consolidation.
             </p>
