--- a/src/app/popup/log-in/log-in.component.scss
+++ b/src/app/popup/log-in/log-in.component.scss
@@ -102,3 +102,15 @@ $white: #efefef;
 .gap-2em{
   gap: 2em;
 }
+.width-400{
+  width: 450px;
+}
+.width-350{
+  width: 350px;
+}
+.btn{
+  width: 230px;
+}
+.inline{
+  display: inline;
+}
