--- a/src/app/popUps/create-account/create-account.component.html
+++ b/src/app/popUps/create-account/create-account.component.html
@@ -1,5 +1,5 @@
 <div class="flex center-center column">
-    <h1 class="text-center colorBlu">Create an Account</h1>
+    <h1 class="text-center colorBlu">{{isEdit? 'Update profile':'Create an Account'}}</h1>
     <form [formGroup]="accountForm" class="flex full-width column padding-12">
 
         <mat-form-field class="full-width">
@@ -36,7 +36,7 @@
             </mat-error>
         </mat-form-field>
 
-        <mat-form-field class="full-width">
+        <mat-form-field class="full-width" *ngIf="!isEdit">
             <mat-label>Enter your password</mat-label>
             <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
@@ -48,7 +48,7 @@
             </mat-error>
         </mat-form-field>
 
-        <mat-form-field class="full-width">
+        <mat-form-field class="full-width" *ngIf="!isEdit">
             <mat-label>Confirm your password</mat-label>
             <input matInput [type]="hide ? 'confirmPassword' : 'text'" formArrayName="confirmPassword">
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
@@ -61,8 +61,8 @@
         </mat-form-field>
 
         <div class="flex gap-1em m-b-1em full-width">
-            <button mat-raised-button class="colorRed half-width">Cancel</button>
-            <button mat-raised-button class="colorBlue half-width" (click)="submit()">Submit</button>
+            <button mat-raised-button class="colorRed half-width" (click)="close()">Cancel</button>
+            <button mat-raised-button class="colorBlue half-width" (click)="isEdit? Update() : submit()">{{isEdit? 'Update':'Submit'}}</button>
         </div>
     </form>
 </div>
